<resources>
    <string name="app_name">Buddy4Life</string>

    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="or">OR CONNECT WITH</string>
    <string name="sign_in">Sign in</string>

    <string name="menu_item_posts">Posts</string>
    <string name="menu_item_my_posts">My Posts</string>
    <string name="menu_item_account">Account</string>
    <string name="menu_item_add_post">Add Post</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="required">*required</string>
    <string name="name">Name</string>
    <string name="breed">Breed</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="optional">Optional</string>
    <string name="read_more">Read More</string>
    <string name="description">Description</string>

    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="dog_information">Dog Information</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_in_to_buddy4life">Sign in to Buddy4Life</string>
    <string name="register">Register</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register_to_buddy4life">Register to Buddy4Life</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="resigter_me">Resigter me!</string>
    <string name="full_name">Full Name</string>
    <string name="my">My</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email_icon_content_description">Email icon for email card</string>
    <string name="logout">Logout</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="delete_post">Delete Post</string>
</resources>