<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/addPostFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_add_post_24"
        android:title="@string/menu_item_add_post" />
    <item
        android:id="@+id/postsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_posts_24"
        android:title="@string/menu_item_posts" />
    <item
        android:id="@+id/myPostsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_my_posts_24"
        android:title="@string/menu_item_my_posts" />
    <item
        android:id="@+id/userAccountFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_account_24"
        android:title="@string/menu_item_account" />
</menu>